# microdata-validator

./: .gitignore  .pylintrc  README.md  SECURITY.md  azure-pipelines.yml  identifier_cheat_sheet.json  pyproject.toml
.github/workflows/: pr.yml  publish.yml
docs/: README.md  USAGE.md
docs/examples/: README.md  SYNT_BEFOLKNING_KJOENN.csv  SYNT_BEFOLKNING_KJOENN.json  SYNT_PERSON_INNTEKT.csv
docs/examples/SYNT_BEFOLKNING_KJOENN/: SYNT_BEFOLKNING_KJOENN.json
docs/examples/SYNT_BEFOLKNING_SIVSTAND/: SYNT_BEFOLKNING_SIVSTAND.json
docs/examples/SYNT_PERSON_INNTEKT/: SYNT_PERSON_INNTEKT.json
microdata_validator/: DatasetMetadataSchema.json  __init__.py  dataset_reader.py  dataset_validator.py  file_utils.py  metadata_model.py  temporal_attributes.py  unit_types.py  utils.py
microdata_validator/adapter/: local_storage.py
microdata_validator/components/: identifier_variables.py  temporal_attributes.py  unit_id_types.py  unit_types.py
microdata_validator/components/unit_type_variables/: BK_HELSESTASJONSKONSULTASJON.json  FAMILIE.json  FORETAK.json  HUSHOLDNING.json  JOBB.json  KJORETOY.json  KOMMUNE.json  KURS.json  PERSON.json  VIRKSOMHET.json  __init__.py
microdata_validator/exceptions/: __init__.py
microdata_validator/metadata_ref/Attribute/: START.json  STOP.json
microdata_validator/model/: __init__.py  metadata.py
microdata_validator/repository/: local_storage.py
microdata_validator/schema/: __init__.py  dataset_metadata_schema.json
microdata_validator/steps/: dataset_reader.py  dataset_validator.py  metadata_inliner.py  metadata_reader.py
tests/: test_inline_metadata.py  test_metadata_model.py  test_metadata_model_2.py  test_unit_types.py  test_utils.py  test_validate.py  test_validate_metadata.py
tests/resources/adapter/: unsorted_dataset.csv
tests/unit/: test_get_unit_id_type.py  test_inline_metadata.py  test_validate.py  test_validate_dataset_name.py  test_validate_metadata.py
(+90 files in other folders)
