[tool.poetry]
name = "microdata-validator"
version = "1.0.1"
description = "Python package for validating datasets in the microdata platform"
authors = ["microdata-developers"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
jsonschema = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-dotenv = "^0.5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
