[tool.poetry]
name = "microdata-validator"
version = "7.0.4"
description = "Python package for validating datasets in the microdata platform"
authors = ["microdata-developers"]
license = "Apache-2.0"
repository = 'https://github.com/statisticsnorway/microdata-validator'
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
jsonschema = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-dotenv = "^0.5.2"
black = {version = "^22.3.0", allow-prereleases = true}
pylint = "^2.15.3"
pycodestyle = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
