[tool.poetry]
name = "microdata-validator"
version = "7.3.4"
description = "Python package for validating datasets in the microdata platform"
authors = ["microdata-developers"]
license = "Apache-2.0"
repository = 'https://github.com/statisticsnorway/microdata-validator'
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.10.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-dotenv = "^0.5.2"
black = "^23.3.0"
ruff = "^0.0.269"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
